--- a/app/src/main/res/layout/gridcalendar.xml
+++ b/app/src/main/res/layout/gridcalendar.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:gravity="center_horizontal"
-        android:id="@+id/gridview_cal_tv"
+        android:id="@+id/grid_calendar"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:textSize="15sp"
