--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MonthFragment">
+    tools:context=".CalendarFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -85,6 +85,12 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="1">
+
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/gridview"
         android:layout_width="match_parent"
@@ -95,5 +101,7 @@
         android:stretchMode="columnWidth"
         android:gravity="center"
         />
+
+    </LinearLayout>
 
 </LinearLayout>
