--- a/app/src/main/res/layout/fragment_monthcalendar.xml
+++ b/app/src/main/res/layout/fragment_monthcalendar.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:background="#A5E35D"
         android:orientation="vertical">
 
@@ -95,6 +95,7 @@
         android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:numColumns="7"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
