--- a/app/src/main/res/layout/day.xml
+++ b/app/src/main/res/layout/day.xml
@@ -6,11 +6,10 @@
     android:gravity="center">
 
     <TextView
-        android:gravity="center_horizontal"
         android:id="@+id/gridview_day"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
-        android:textSize="15sp"
-        />
+        android:gravity="center_horizontal"
+        android:textSize="15sp" />
 
 </LinearLayout>
