--- a/app/src/main/res/layout/fragment_monthcalendar.xml
+++ b/app/src/main/res/layout/fragment_monthcalendar.xml
@@ -90,9 +90,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:numColumns="7"
-            android:verticalSpacing="10dp"
-            android:horizontalSpacing="10dp"
+            android:verticalSpacing="2dp"
+            android:horizontalSpacing="2dp"
             android:stretchMode="columnWidth"
+            android:background="@color/purple_500"
             android:gravity="center" />
 
     </LinearLayout>
