--- a/app/src/main/res/layout/fragment_monthcalendar.xml
+++ b/app/src/main/res/layout/fragment_monthcalendar.xml
@@ -13,68 +13,67 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/sunday"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:text="일"
-            android:textSize="10dp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
+            android:textColor="@color/black" />
+
         <TextView
+            android:id="@+id/monday"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:text="월"
-            android:textSize="10dp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
+            android:textColor="@color/black"
+            android:gravity="center"/>
+
         <TextView
+            android:id="@+id/tuesday"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:text="화"
-            android:textSize="10dp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
+            android:textColor="@color/black"
+            android:gravity="center"/>
+
         <TextView
+            android:id="@+id/wednesday"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:text="수"
-            android:textSize="10dp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
+            android:textColor="@color/black"
+            android:gravity="center"/>
+
         <TextView
+            android:id="@+id/thursday"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:text="목"
-            android:textSize="10dp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
+            android:textColor="@color/black"
+            android:gravity="center"/>
+
         <TextView
+            android:id="@+id/friday"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:text="금"
-            android:textSize="10dp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
+            android:textColor="@color/black"
+            android:gravity="center"/>
+
         <TextView
+            android:id="@+id/saturday"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:text="토"
-            android:textSize="10dp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
+            android:textColor="@color/black"
+            android:gravity="center"/>
 
     </LinearLayout>
 
