--- a/app/src/main/res/layout/fragment_weekcalendar.xml
+++ b/app/src/main/res/layout/fragment_weekcalendar.xml
@@ -224,12 +224,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:numColumns="24"
-                android:verticalSpacing="2dp"
-                android:horizontalSpacing="2dp"
-                android:stretchMode="columnWidth"
                 android:background="@color/black"
-                android:gravity="center" />
+                android:gravity="center"
+                android:horizontalSpacing="2dp"
+                android:numColumns="7"
+                android:verticalSpacing="2dp" />
 
         </LinearLayout>
 
