주간 달력 수정중

--- a/app/src/main/res/layout/fragment_weekview.xml
+++ b/app/src/main/res/layout/fragment_weekview.xml
@@ -9,6 +9,6 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/week_vpPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
