--- a/app/src/main/res/layout/fragment_weekcalendar.xml
+++ b/app/src/main/res/layout/fragment_weekcalendar.xml
@@ -108,7 +108,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -122,104 +122,104 @@
 
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="0"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="1"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="2"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="3"/>
                 <TextView
-                    android:layout_width="15dp"
-                    android:layout_height="45dp"
+                    android:layout_width="20dp"
+                    android:layout_height="50dp"
                     android:text="4"/>
                 <TextView
-                    android:layout_width="15dp"
-                    android:layout_height="45dp"
+                    android:layout_width="20dp"
+                    android:layout_height="50dp"
                     android:text="5"/>
                 <TextView
-                    android:layout_width="15dp"
-                    android:layout_height="45dp"
+                    android:layout_width="20dp"
+                    android:layout_height="50dp"
                     android:text="6"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="7"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="8"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="9"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="10"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="11"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="12"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="13"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="14"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="15"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="16"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="17"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="18"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="19"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="20"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="21"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="22"/>
                 <TextView
                     android:layout_width="20dp"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:text="23"/>
 
             </LinearLayout>
 
-            <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+            <GridView
                 android:id="@+id/week_gridview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
