--- a/app/src/main/res/layout/fragment_monthcalendar.xml
+++ b/app/src/main/res/layout/fragment_monthcalendar.xml
@@ -4,9 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:color="@color/white"
     tools:context=".MonthCalendarFragment">
 
     <LinearLayout
+        android:id="@+id/cal_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#A5E35D"
