(방민족 수정) 월간/주간 색변화
월간 달력과 주간 달력 선택시 색이 변화하는 코드를 수정했습니다

--- a/app/src/main/res/layout/fragment_monthcalendar.xml
+++ b/app/src/main/res/layout/fragment_monthcalendar.xml
@@ -95,7 +95,9 @@
             android:horizontalSpacing="2dp"
             android:stretchMode="columnWidth"
             android:background="@color/purple_500"
-            android:gravity="center" />
+            android:gravity="center"
+            android:listSelector="@color/teal_200"
+            android:drawSelectorOnTop="true"/>
 
     </LinearLayout>
 
