--- a/app/src/main/res/layout/fragment_weekcalendar.xml
+++ b/app/src/main/res/layout/fragment_weekcalendar.xml
@@ -228,7 +228,9 @@
                 android:gravity="center"
                 android:horizontalSpacing="2dp"
                 android:numColumns="7"
-                android:verticalSpacing="2dp" />
+                android:verticalSpacing="2dp"
+                android:listSelector="@color/teal_200"
+                android:drawSelectorOnTop="true"/>
 
         </LinearLayout>
 
