--- a/app/src/main/res/layout/fragment_weekcalendar.xml
+++ b/app/src/main/res/layout/fragment_weekcalendar.xml
@@ -224,7 +224,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/black"
+                android:background="@color/purple_500"
                 android:gravity="center"
                 android:horizontalSpacing="2dp"
                 android:numColumns="7"
