--- a/app/src/main/res/layout/fragment_weekcalendar.xml
+++ b/app/src/main/res/layout/fragment_weekcalendar.xml
@@ -110,6 +110,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -233,6 +237,16 @@
                 android:drawSelectorOnTop="true"/>
 
         </LinearLayout>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                android:src="@drawable/ic_button"
+                android:layout_margin="16dp" />
+
+        </FrameLayout>
 
     </ScrollView>
 
